0.0.4
Standardising copy/paste/dup/dnd etc.
Redone d'n'd to allow dragging and droping outside of app.
External tools can now be in the main tools menu, the popup menu or both.
Delimter for passed files now set to newline.
Tools can now appear in popup menu.
KKFILEMANAGER_CURRENT_TAB passed to script as env var, path to current tab ';' delimiter.
KKFILEMANAGER_TAB_LIST passed to script as env var, path to all open tabs ';' delimiter.
KKFILEMANAGER_SELECTED_ITEMS passed to script as env var, path to all selected items ';' delimiter.
Started to add external tools.
Updated icon.
Set default widget on new filename dialog.
Done 'Paste'.
Added 'About'.
Fixed gtk3/2 menu button signals different.
Opening disk or bookmark now deletes forward history as usual.
Moved history routines to seperate file.
Back/Forward tool buttons now work.
Redone forward/back history menus.

0.0.3
Added go back history.
Added copy/paste to context menu.
Added workaround for gtk2 iconview bug ignoring double click on item after d'and'd.
Adjusted size of icons in toobar in gtk3.
Beat gtk's iconview into submission! DandD now works as properly.
Now detects disk physically removed from system ( eg sd cards ).
Now detects blank cd/dvd inserted/ejected, in multiple cd drives.
Now dvd/cdrom only shown when media inserted.
Fixed wrong sized icons in menus and toolbar for certain themes in gtk3 version.
Added icons to disk list and bm list.
Added 'New Bookmark' to iconview context menu.
Added bookmarks pane, uses ~/.KKFileManager/bookmarks list of paths to folders.
Fixed disks being mounted/unmounted outside of app being missed.
Buffered loading of folders with large contents.
Made single instance app.
Added 'Extract' to context menu.
Added duplicate menu item to pop up.
Disks inserted/removed  now auto detected.
Disk list include/exclude now sed type regex eg include list:
.*\(sd.[1-9]*[0-9]$\|dvd\)
Exclude list:
\(sda[123456]$\|sda13\)

Prefs now change immediately.